<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    tools:context=".signin.SignInActivity">

    <include layout="@layout/logo" />

    <LinearLayout
        android:id="@+id/linearLayoutSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_horizontal"
            android:text="@string/sign_in_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title_S" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_S">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/padding_S"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_edit_text" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_S"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_edit_text" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height_L"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_style"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height_L"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_transparent_style"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_button" />

</RelativeLayout>
