<resources>
    <string name="app_name" translatable="false">Travel Planner</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="day_plans">Day Plans</string>
    <string name="scans">Scans</string>
    <string name="transport">Transport</string>
    <string name="accommodation">Accommodation</string>
    <string name="no_travels">You have no travels</string>
    <string name="password">password</string>
    <string name="email">e-mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">confirm password</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="scanner_permissions_error">You need to grant camera and storage permissions</string>
    <string name="scanner_initialization_error">Scanner initialization failed</string>
    <string name="scan">Scan</string>
    <string name="scanner_general_error">Something bad happened to scanner</string>
    <string name="scanner_success">You added a new scan</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="scan_upload_error">Something went wrong with uploading the scan</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Something went wrong. Please try again</string>
    <string name="sign_up_successful">Your account has been created</string>
    <string name="sign_up_email_error">Account exists</string>
    <string name="sign_in_error">Email or password is incorrect</string>
    <string name="sign_up_diff_passwords">Passwords are different</string>
    <string name="travel_name">Travel name…</string>
    <string name="new_travel">New travel</string>
    <string name="add_travel_error">Error when adding travel</string>
    <string name="add_travel_ok">You added a new travel</string>
    <string name="change_travel_name_ok">You changed travel name</string>
    <string name="change_travel_name">Change travel name</string>
    <string name="update_travel_error">Error when updating travel</string>
    <string name="delete_travels_ok">You deleted selected travels(s)</string>
    <string name="delete_travels_error">Error when deleting travel(s)</string>
    <string name="share_travel_ok">You shared travel</string>
    <string name="share_travel_error">Error when sharing travel</string>
    <string name="share_travel">Share travel</string>
    <string name="add_plan_ok">You added a new plan element</string>
    <string name="add_plan_error">Error when adding plan element</string>
    <string name="update_plan_ok">You updated a plan element</string>
    <string name="update_plan_error">Error when updating plan element</string>
    <string name="no_day_plans">You have no day plans for this travel</string>
    <string name="choose_option">Choose option</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="mark_as_incompleted">Mark as incompleted</string>
    <string name="plan_element_completed">You marked plan as completed</string>
    <string name="plan_element_incompleted">You marked plan as incompleted</string>
    <string name="plan_element_share">Share plan</string>
    <string name="authorization_error">You are not authorized to perform this action</string>
    <string name="no_scans">You have no scans</string>
    <string name="add_scan_error">Error when adding scan</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="from_date">From date</string>
    <string name="from_time">From time</string>
    <string name="to_date">To date</string>
    <string name="to_time">To time</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="missing_required_fields_error">Fill in all the fields</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="delete_scans_ok">You deleted selected scan(s)</string>
    <string name="delete_scans_error">Error when deleting scan(s)</string>
    <string name="delete_entry">Delete %1$s</string>
    <string name="delete_confirmation">Are you sure you want to delete selected %1$s?</string>
    <string name="travels">travels</string>
    <string name="choose_category">Choose category</string>
    <string name="opening_hours">Opening hours</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="rating">Rating</string>
    <string name="notes">Notes</string>
    <string name="city">City</string>
    <string name="load_map_error">Can\'t load map</string>
    <string name="no_items_search_error">No items found</string>
    <string name="email_incorrect">Email is incorrect</string>
    <string name="password_too_simple">Password must be at least 8 characters long,
        contain at least 1 number, 1 lowercase and 1 uppercase letter</string>
    <string name="delete_plan_elements_ok">You deleted selected plan element(s)</string>
    <string name="delete_plan_elements_error">Error when deleting plan element(s)</string>
    <string name="friend_added"> You added a friend</string>
    <string name="friend_deleted">You deleted a friend</string>
    <string name="add_user_confirmation">Are you sure you want to add selected user?</string>
    <string name="add_entry">Add %1$s</string>
    <string name="delete_friends_ok">You deleted selected friend(s)</string>
    <string name="add_friend">Add friend</string>
    <string name="delete_friends">Delete friends</string>
    <string name="delete_friends_confirmation">Are you sure you want to delete selected friends?</string>
    <string name="my_friends">My friends</string>
    <string name="no_selected_friends">You didn\'t select any friends</string>
    <string name="delete_friends_error">Error when deleting friend(s)</string>
    <string name="add_friend_error">Error when adding friend</string>
    <string name="share_using">Share using</string>
    <string name="missing_facebook_app">Facebook App isn\'t installed</string>

    <string name="rate_place">Rate place!</string>
    <string name="rate_place_completed">Thanks!</string>
    <string name="rate_place_error">Error when rating place</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="wrong_dates_error">\"From\" date and time must be before \"To\" date and time</string>

    <!-- if you add category - add it in enum "Category" and array.xml -->
    <string name="restaurant">Restaurant</string>
    <string name="sights_museum">Sights and museum</string>
    <string name="leisure_outdoor">Leisure outdoor</string>
    <string name="coffee_tea">Coffee and tea</string>
    <string name="going_out">Going out</string>
    <string name="shopping">Shopping</string>
    <string name="natural_geographical">Natural</string>
    <string name="menu_set_photo">Set photo</string>
    <string name="notification_title">Places you might like</string>
    <string name="notification_channel_name">Place recommendations</string>
    <string name="recommended_places">Recommended places</string>
    <string name="notification_text">Based on your ratings we\'ve found some places you might like</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="driving">driving</string>
    <string name="walking">walking</string>
    <string name="transit">transit</string>
</resources>
